Tried head-to-head league scoring

--- a/Notebook-yffpy.ipynb
+++ b/Notebook-yffpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2019-10-03 14:11:05,763 DEBUG] [yffpy.query.query.query] Response (JSON): {'fantasy_content': {'xml:lang': 'en-US', 'yahoo:uri': '/fantasy/v2/game/396/metadata', 'game': [{'game_key': '396', 'game_id': '396', 'name': 'Hockey', 'code': 'nhl', 'type': 'full', 'url': 'https://hockey.fantasysports.yahoo.com/hockey', 'season': '2019', 'is_registration_over': 0, 'is_game_over': 0, 'is_offseason': 0, 'is_live_draft_lobby_active': 1}], 'time': '8.8388919830322ms', 'copyright': 'Data provided by Yahoo! and STATS, LLC', 'refresh_rate': '60'}}\n",
+      "[2019-10-03 14:11:05,764 DEBUG] [yffpy.query.query.query] Data fetched with query URL: https://fantasysports.yahooapis.com/fantasy/v2/game/396/metadata?format=json\n",
+      "[2019-10-03 14:11:05,764 DEBUG] [yffpy.query.query.query] Response (Yahoo fantasy data extracted from: \"fantasy_content\"): {'xml:lang': 'en-US', 'yahoo:uri': '/fantasy/v2/game/396/metadata', 'game': [{'game_key': '396', 'game_id': '396', 'name': 'Hockey', 'code': 'nhl', 'type': 'full', 'url': 'https://hockey.fantasysports.yahoo.com/hockey', 'season': '2019', 'is_registration_over': 0, 'is_game_over': 0, 'is_offseason': 0, 'is_live_draft_lobby_active': 1}], 'time': '8.8388919830322ms', 'copyright': 'Data provided by Yahoo! and STATS, LLC', 'refresh_rate': '60'}\n",
+      "[2019-10-03 14:11:05,765 DEBUG] [yffpy.query.query.query] Response (Yahoo fantasy data extracted from: ['game']): [{'game_key': '396', 'game_id': '396', 'name': 'Hockey', 'code': 'nhl', 'type': 'full', 'url': 'https://hockey.fantasysports.yahoo.com/hockey', 'season': '2019', 'is_registration_over': 0, 'is_game_over': 0, 'is_offseason': 0, 'is_live_draft_lobby_active': 1}]\n",
+      "[2019-10-03 14:11:05,768 DEBUG] [yffpy.query.query.query] Unpacked and parsed JSON (Yahoo fantasy data wth parent type: <class 'yffpy.models.Game'>):\n",
+      "{'game_key': '396', 'game_id': '396', 'name': 'Hockey', 'code': 'nhl', 'type': 'full', 'url': 'https://hockey.fantasysports.yahoo.com/hockey', 'season': '2019', 'is_registration_over': 0, 'is_game_over': 0, 'is_offseason': 0, 'is_live_draft_lobby_active': 1}\n",
+      "[2019-10-03 14:11:05,840 DEBUG] [yffpy.query.query.query] Response (JSON): {'fantasy_content': {'xml:lang': 'en-US', 'yahoo:uri': '/fantasy/v2/team/396.l.43832.t.1/draftresults', 'team': [[{'team_key': '396.l.43832.t.1'}, {'team_id': '1'}, {'name': \"Oren's Team\"}, [], {'url': 'https://hockey.fantasysports.yahoo.com/hockey/43832/1'}, {'team_logos': [{'team_logo': {'size': 'large', 'url': 'https://ct.yimg.com/cy/1689/24999113210_66a2698cec_192sq.jpg?ct=fantasy'}}]}, [], {'waiver_priority': 15}, [], {'number_of_moves': 0}, {'number_of_trades': 0}, {'roster_adds': {'coverage_type': 'week', 'coverage_value': 1, 'value': '0'}}, [], {'league_scoring_type': 'point'}, [], {'draft_position': 5}, {'has_draft_grade': 0}, [], [], {'managers': [{'manager': {'manager_id': '1', 'nickname': 'Oren', 'guid': 'IL3XCIOS3EMGHZ6LKMPFSSO2XE', 'is_commissioner': '1', 'email': 'oren.winer@gmail.com', 'image_url': 'https://ct.yimg.com/cy/1768/39361574426_98028a_64sq.jpg'}}]}], {'draft_results': {'0': {'draft_result': {'pick': 5, 'round': 1, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5980'}}, '1': {'draft_result': {'pick': 34, 'round': 2, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3764'}}, '2': {'draft_result': {'pick': 43, 'round': 3, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3614'}}, '3': {'draft_result': {'pick': 72, 'round': 4, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5364'}}, '4': {'draft_result': {'pick': 81, 'round': 5, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3981'}}, '5': {'draft_result': {'pick': 110, 'round': 6, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.2645'}}, '6': {'draft_result': {'pick': 119, 'round': 7, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5279'}}, '7': {'draft_result': {'pick': 148, 'round': 8, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.4792'}}, '8': {'draft_result': {'pick': 157, 'round': 9, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.4251'}}, '9': {'draft_result': {'pick': 186, 'round': 10, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.6060'}}, 'count': 10}}], 'time': '19.519805908203ms', 'copyright': 'Data provided by Yahoo! and STATS, LLC', 'refresh_rate': '60'}}\n",
+      "[2019-10-03 14:11:05,841 DEBUG] [yffpy.query.query.query] Data fetched with query URL: https://fantasysports.yahooapis.com/fantasy/v2/team/396.l.43832.t.1/draftresults?format=json\n",
+      "[2019-10-03 14:11:05,841 DEBUG] [yffpy.query.query.query] Response (Yahoo fantasy data extracted from: \"fantasy_content\"): {'xml:lang': 'en-US', 'yahoo:uri': '/fantasy/v2/team/396.l.43832.t.1/draftresults', 'team': [[{'team_key': '396.l.43832.t.1'}, {'team_id': '1'}, {'name': \"Oren's Team\"}, [], {'url': 'https://hockey.fantasysports.yahoo.com/hockey/43832/1'}, {'team_logos': [{'team_logo': {'size': 'large', 'url': 'https://ct.yimg.com/cy/1689/24999113210_66a2698cec_192sq.jpg?ct=fantasy'}}]}, [], {'waiver_priority': 15}, [], {'number_of_moves': 0}, {'number_of_trades': 0}, {'roster_adds': {'coverage_type': 'week', 'coverage_value': 1, 'value': '0'}}, [], {'league_scoring_type': 'point'}, [], {'draft_position': 5}, {'has_draft_grade': 0}, [], [], {'managers': [{'manager': {'manager_id': '1', 'nickname': 'Oren', 'guid': 'IL3XCIOS3EMGHZ6LKMPFSSO2XE', 'is_commissioner': '1', 'email': 'oren.winer@gmail.com', 'image_url': 'https://ct.yimg.com/cy/1768/39361574426_98028a_64sq.jpg'}}]}], {'draft_results': {'0': {'draft_result': {'pick': 5, 'round': 1, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5980'}}, '1': {'draft_result': {'pick': 34, 'round': 2, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3764'}}, '2': {'draft_result': {'pick': 43, 'round': 3, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3614'}}, '3': {'draft_result': {'pick': 72, 'round': 4, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5364'}}, '4': {'draft_result': {'pick': 81, 'round': 5, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3981'}}, '5': {'draft_result': {'pick': 110, 'round': 6, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.2645'}}, '6': {'draft_result': {'pick': 119, 'round': 7, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5279'}}, '7': {'draft_result': {'pick': 148, 'round': 8, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.4792'}}, '8': {'draft_result': {'pick': 157, 'round': 9, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.4251'}}, '9': {'draft_result': {'pick': 186, 'round': 10, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.6060'}}, 'count': 10}}], 'time': '19.519805908203ms', 'copyright': 'Data provided by Yahoo! and STATS, LLC', 'refresh_rate': '60'}\n",
+      "[2019-10-03 14:11:05,842 DEBUG] [yffpy.query.query.query] Response (Yahoo fantasy data extracted from: ['team', 'draft_results']): {'0': {'draft_result': {'pick': 5, 'round': 1, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5980'}}, '1': {'draft_result': {'pick': 34, 'round': 2, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3764'}}, '2': {'draft_result': {'pick': 43, 'round': 3, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3614'}}, '3': {'draft_result': {'pick': 72, 'round': 4, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5364'}}, '4': {'draft_result': {'pick': 81, 'round': 5, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.3981'}}, '5': {'draft_result': {'pick': 110, 'round': 6, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.2645'}}, '6': {'draft_result': {'pick': 119, 'round': 7, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.5279'}}, '7': {'draft_result': {'pick': 148, 'round': 8, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.4792'}}, '8': {'draft_result': {'pick': 157, 'round': 9, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.4251'}}, '9': {'draft_result': {'pick': 186, 'round': 10, 'team_key': '396.l.43832.t.1', 'player_key': '396.p.6060'}}, 'count': 10}\n",
+      "[2019-10-03 14:11:05,867 DEBUG] [yffpy.query.query.query] Unpacked and parsed JSON (Yahoo fantasy data wth parent type: None):\n",
+      "[{'draft_result': {\n",
+      "  \"pick\": 5,\n",
+      "  \"round\": 1,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.5980\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 34,\n",
+      "  \"round\": 2,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.3764\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 43,\n",
+      "  \"round\": 3,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.3614\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 72,\n",
+      "  \"round\": 4,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.5364\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 81,\n",
+      "  \"round\": 5,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.3981\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 110,\n",
+      "  \"round\": 6,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.2645\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 119,\n",
+      "  \"round\": 7,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.5279\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 148,\n",
+      "  \"round\": 8,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.4792\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 157,\n",
+      "  \"round\": 9,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.4251\"\n",
+      "}}, {'draft_result': {\n",
+      "  \"pick\": 186,\n",
+      "  \"round\": 10,\n",
+      "  \"team_key\": \"396.l.43832.t.1\",\n",
+      "  \"player_key\": \"396.p.6060\"\n",
+      "}}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'draft_result': {\n",
+       "    \"pick\": 5,\n",
+       "    \"round\": 1,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.5980\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 34,\n",
+       "    \"round\": 2,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.3764\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 43,\n",
+       "    \"round\": 3,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.3614\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 72,\n",
+       "    \"round\": 4,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.5364\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 81,\n",
+       "    \"round\": 5,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.3981\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 110,\n",
+       "    \"round\": 6,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.2645\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 119,\n",
+       "    \"round\": 7,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.5279\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 148,\n",
+       "    \"round\": 8,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.4792\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 157,\n",
+       "    \"round\": 9,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.4251\"\n",
+       "  }}, {'draft_result': {\n",
+       "    \"pick\": 186,\n",
+       "    \"round\": 10,\n",
+       "    \"team_key\": \"396.l.43832.t.1\",\n",
+       "    \"player_key\": \"396.p.6060\"\n",
+       "  }}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#yahoo_query.get_game_stat_categories_by_game_id(game_id)"
+    "#yahoo_query.get_team_draft_results(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#yahoo_query.get_league_metadata()"
+    "#yahoo_query.get_game_stat_categories_by_game_id(game_id)"
    ]
   },
   {
@@ -1426,6 +1557,161 @@
    "source": [
     "sheet.append(new_excel_row)\n",
     "book.save('Points.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Try out code for a head-to-head league"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "league_id = '138671' # put your real league id here\n",
+    "game_id = \"395\"\n",
+    "game_code = \"nba\"\n",
+    "season = \"2019\"\n",
+    "auth_dir = 'X:/yffpy-batch/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yahoo_query = YahooFantasyFootballQuery(auth_dir, league_id, game_id=game_id, game_code=game_code, offline=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'outcome_totals': {'losses': 0, 'percentage': 0.0, 'ties': 0, 'wins': 0}, 'rank': None}\n",
+      "{'outcome_totals': {'losses': 0, 'percentage': 0.0, 'ties': 0, 'wins': 0}, 'rank': None}\n",
+      "{'outcome_totals': {'losses': 0, 'percentage': 0.0, 'ties': 0, 'wins': 0}, 'rank': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert Standings Object to json\n",
+    "parsed_json = (json.loads(str(standings_data)))\n",
+    "\n",
+    "team_list = []\n",
+    "for team in parsed_json['teams']:\n",
+    "    #team_list.append((int(team['team']['team_id']),team['team']['team_standings']['team_points']['total']))\n",
+    "    print(team['team']['team_standings'])\n",
+    "#team_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'teams': [{'team': {'has_draft_grade': 0,\n",
+       "    'league_scoring_type': 'head',\n",
+       "    'managers': {'manager': {'email': 'shafquat1@yahoo.com',\n",
+       "      'guid': 'PDJFZAHN5UBXWO4JJZ5FFBSLN4',\n",
+       "      'image_url': 'https://ct.yimg.com/cy/1768/39361574426_98028a_64sq.jpg',\n",
+       "      'manager_id': '1',\n",
+       "      'nickname': 'Shafquat'}},\n",
+       "    'name': \"Shafquat's Team\",\n",
+       "    'number_of_moves': 0,\n",
+       "    'number_of_trades': 0,\n",
+       "    'roster_adds': {'coverage_type': 'week',\n",
+       "     'coverage_value': '1',\n",
+       "     'value': '0'},\n",
+       "    'team_id': '1',\n",
+       "    'team_key': '395.l.138671.t.1',\n",
+       "    'team_logos': {'team_logo': {'size': 'large',\n",
+       "      'url': 'https://s.yimg.com/cv/apiv2/default/nba/nba_4_s.png'}},\n",
+       "    'team_points': {'coverage_type': 'season',\n",
+       "     'season': '2019',\n",
+       "     'total': None},\n",
+       "    'team_standings': {'outcome_totals': {'losses': 0,\n",
+       "      'percentage': 0.0,\n",
+       "      'ties': 0,\n",
+       "      'wins': 0},\n",
+       "     'rank': None},\n",
+       "    'url': 'https://basketball.fantasysports.yahoo.com/nba/138671/1',\n",
+       "    'waiver_priority': None}},\n",
+       "  {'team': {'has_draft_grade': 0,\n",
+       "    'league_scoring_type': 'head',\n",
+       "    'managers': {'manager': {'email': 'dimitri.bollegala@gmail.com',\n",
+       "      'guid': 'TAX2FSV2C63SF3KDVRXBFOI42E',\n",
+       "      'image_url': 'https://ct.yimg.com/cy/1768/39361574426_98028a_64sq.jpg',\n",
+       "      'manager_id': '2',\n",
+       "      'nickname': 'Dimitri'}},\n",
+       "    'name': \"Dimitri's Team\",\n",
+       "    'number_of_moves': 0,\n",
+       "    'number_of_trades': 0,\n",
+       "    'roster_adds': {'coverage_type': 'week',\n",
+       "     'coverage_value': '1',\n",
+       "     'value': '0'},\n",
+       "    'team_id': '2',\n",
+       "    'team_key': '395.l.138671.t.2',\n",
+       "    'team_logos': {'team_logo': {'size': 'large',\n",
+       "      'url': 'https://s.yimg.com/cv/apiv2/default/nba/nba_2_d.png'}},\n",
+       "    'team_points': {'coverage_type': 'season',\n",
+       "     'season': '2019',\n",
+       "     'total': None},\n",
+       "    'team_standings': {'outcome_totals': {'losses': 0,\n",
+       "      'percentage': 0.0,\n",
+       "      'ties': 0,\n",
+       "      'wins': 0},\n",
+       "     'rank': None},\n",
+       "    'url': 'https://basketball.fantasysports.yahoo.com/nba/138671/2',\n",
+       "    'waiver_priority': None}},\n",
+       "  {'team': {'has_draft_grade': 0,\n",
+       "    'league_scoring_type': 'head',\n",
+       "    'managers': {'manager': {'email': 'rsandulescu@yahoo.ca',\n",
+       "      'guid': '2JEMDAOSRPYNSM5FPITUBS52RM',\n",
+       "      'image_url': 'https://ct.yimg.com/cy/1768/39361574426_98028a_64sq.jpg',\n",
+       "      'manager_id': '3',\n",
+       "      'nickname': 'RUXANDRA'}},\n",
+       "    'name': \"RUXANDRA's Team\",\n",
+       "    'number_of_moves': 0,\n",
+       "    'number_of_trades': 0,\n",
+       "    'roster_adds': {'coverage_type': 'week',\n",
+       "     'coverage_value': '1',\n",
+       "     'value': '0'},\n",
+       "    'team_id': '3',\n",
+       "    'team_key': '395.l.138671.t.3',\n",
+       "    'team_logos': {'team_logo': {'size': 'large',\n",
+       "      'url': 'https://s.yimg.com/cv/apiv2/default/nba/nba_11_r.png'}},\n",
+       "    'team_points': {'coverage_type': 'season',\n",
+       "     'season': '2019',\n",
+       "     'total': None},\n",
+       "    'team_standings': {'outcome_totals': {'losses': 0,\n",
+       "      'percentage': 0.0,\n",
+       "      'ties': 0,\n",
+       "      'wins': 0},\n",
+       "     'rank': None},\n",
+       "    'url': 'https://basketball.fantasysports.yahoo.com/nba/138671/3',\n",
+       "    'waiver_priority': None}}]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed_json"
    ]
   },
   {
